--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "dateformat": "^3.0.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.0",
+    "jest": "^25.1.0",
+    "js-yaml": "^3.13.1",
+    "ts-jest": "^25.2.0",
+    "typescript": "^3.7.5"
   }
 }
