--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "module": "commonjs",
       "target": "esnext",
-      "lib": ["es2015", "es2017"],
+      "lib": ["es2015", "es2017", "DOM"],
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
@@ -12,6 +12,6 @@
       "removeComments": false,
       "preserveConstEnums": true
     },
-    "include": ["action.yml", "index.ts", "__tests__"],
+    "include": ["action.yml", "index.ts","global.d.ts", "__tests__"],
     "exclude": ["node_modules"]
   }
