--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@actions/core": "^1.2.1",
     "@actions/github": "^2.0.1",
+    "@highwaythree/jira-github-actions-common": "^1.0.0",
     "dateformat": "^3.0.3",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
-    "upload-build-upload-deployment-token-retrieval-logic": "file:../upload-build-upload-deployment-token-retrieval-logic"
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
